Get server and cloud-init working

--- a/.gitignore
+++ b/.gitignore
@@ -31,7 +31,11 @@ override.tf.json
 
 # Include tfplan files to ignore the plan output of command: terraform plan -out=tfplan
 # example: *tfplan*
+**/main.tfplan
 
 # Ignore CLI configuration files
 .terraformrc
 terraform.rc
+
+# Build artifacts
+**/artifacts/
