Fix typo in cloud-init admin user setup

--- a/terraform/scripts/cloud-init.yml
+++ b/terraform/scripts/cloud-init.yml
@@ -31,7 +31,7 @@ groups:
 
 users:
   - name: admin
-    sudo: All=(ALL) NOPASSWD:ALL
+    sudo: ALL=(ALL) NOPASSWD:ALL
     gcos: "Admin User"
     groups: [sudo, adm, docker]
     shell: /bin/bash
