Server IP to cloudflare, specify admin username, DNS naming

--- a/terraform/scripts/cloud-init.yml
+++ b/terraform/scripts/cloud-init.yml
@@ -30,7 +30,7 @@ groups:
   - docker
 
 users:
-  - name: admin
+  - name: "${admin_user}"
     sudo: ALL=(ALL) NOPASSWD:ALL
     gcos: "Admin User"
     groups: [sudo, adm, docker]
