Add traefik labels to immich compose file

--- a/docker-services/immich-app/docker-compose.yml
+++ b/docker-services/immich-app/docker-compose.yml
@@ -30,6 +30,12 @@ services:
     restart: always
     healthcheck:
       disable: false
+    labels:
+      traefik.enable: true
+      # increase readingTimeouts for the entrypoint used here
+      traefik.http.routers.immich.entrypoints: websecure
+      traefik.http.routers.immich.rule: Host(`immich.swintronics.com`)
+      traefik.http.services.immich.loadbalancer.server.port: 2283
 
   immich-machine-learning:
     container_name: immich_machine_learning
