--- a/docker-services/traefik/config/traefik.yml
+++ b/docker-services/traefik/config/traefik.yml
@@ -18,6 +18,11 @@ entryPoints:
 
   websecure:
     address: :443
+    transport:
+      respondingTimeouts:
+        readTimeout: 600s
+        idleTimeout: 600s
+        writeTimeout: 600s
 
 serversTransport:
   insecureSkipVerify: true
@@ -33,7 +38,7 @@ certificatesResolvers:
   myresolver:
     acme:
       # Uncomment caserver to use staging server
-      caserver: "https://acme-staging-v02.api.letsencrypt.org/directory"
+      # caserver: "https://acme-staging-v02.api.letsencrypt.org/directory"
       email: postmaster@swintronics.com
       storage: /ssl-certs/acme.json
       dnsChallenge:
