--- a/docker-services/traefik/config/traefik.yml
+++ b/docker-services/traefik/config/traefik.yml
@@ -38,7 +38,7 @@ certificatesResolvers:
   myresolver:
     acme:
       # Uncomment caserver to use staging server
-      # caserver: "https://acme-staging-v02.api.letsencrypt.org/directory"
+      caserver: "https://acme-staging-v02.api.letsencrypt.org/directory"
       email: postmaster@swintronics.com
       storage: /ssl-certs/acme.json
       dnsChallenge:
