Hopefully fix users.sudo for cloud-init

--- a/terraform/scripts/cloud-init.yml
+++ b/terraform/scripts/cloud-init.yml
@@ -35,8 +35,7 @@ groups:
 
 users:
   - name: "${admin_user}"
-    sudo: ALL=(ALL) NOPASSWD:ALL
-    gcos: "Admin User"
+    sudo: "ALL=(ALL) NOPASSWD:ALL"
     groups: [sudo, adm, docker]
     shell: /bin/bash
     ssh-authorized-keys:
