Create a docker ingress network and use it

--- a/docker-services/httpbin/compose.yml
+++ b/docker-services/httpbin/compose.yml
@@ -1,10 +1,17 @@
+include:
+  - "../docker-network-common.yml"
+
 services:
   httpbin:
     image: "kennethreitz/httpbin"
     container_name: "httpbin"
     restart: "no"
+    networks:
+      - ingress
+
     labels:
       - "traefik.enable=true"
       - "traefik.http.routers.httpbin.rule=Host(`httpbin.swintronics.com`)"
       - "traefik.http.routers.httpbin.entrypoints=websecure"
       - "traefik.http.routers.httpbin.tls.certresolver=myresolver"
+      - "traefik.docker.network=ingress"
