Use Sven van Ginkel's Traefik setup

--- a/docker-services/traefik/compose.yml
+++ b/docker-services/traefik/compose.yml
@@ -3,47 +3,41 @@ include:
 
 services:
   traefik:
-    image: traefik:v3.0
+    image: traefik:v3.41
     container_name: traefik
-    restart: always
+    restart: unless-stopped
+    security_opt:
+      - no-new-privileges:true
+    environment:
+      - TZ=America/New_York
+      - CF_DNS_API_TOKEN=${CFAPI}
+      - CF_API_EMAIL=${CF_API_EMAIL}
     networks:
       - proxy
     ports:
       - 80:80
       - 443:443
+      - 8080:8080 # Dashboard WebGui
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock:ro
       - ./data/traefik.yml:/traefik.yml:ro
       - ./data/configs:/configs:ro
       - ./data/acme.json:/acme.json:rw
       - ./data/logs:/logs:rw
-    environment:
-      - TZ=America/New_York
-      - CF_DNS_API_TOKEN=${CFAPI}
-    read_only: true
-    security_opt:
-      - no-new-privileges=true
-    labels:
-      - traefik.enable=true
-      - traefik.http.routers.traefik-https.entrypoints=https
-      - traefik.http.routers.traefik-https.rule=Host(`myproxy.swintronics.com`)
-      - traefik.http.middlewares.traefik-auth.basicauth.users=${TRAEFIKADMIN}
-      - traefik.http.routers.traefik-https.middlewares=traefik-auth
-      - traefik.http.routers.traefik-https.service=api@internal
-      - traefik.http.routers.traefik-https.tls.certresolver=letsencrypt
-      - traefik.http.routers.traefik-https.tls.domains[0].main=swintronics.com
-      - traefik.http.routers.traefik-https.tls.domains[0].sans=*.swintronics.com
 
+    read_only: true
+
+
+  services:
   whoami:
-    image: "traefik/whoami"
-    container_name: "simple-service"
-    networks:
-      - proxy
+    container_name: simple-service
+    image: traefik/whoami
     labels:
-      - "traefik.enable=true"
-      - "traefik.http.routers.whoami.rule=Host(`whoami.swintronics.com`)"
-      - "traefik.http.routers.whoami.entrypoints=websecure"
-      - "traefik.http.routers.whoami.tls.certresolver=myresolver"
-      #- "traefik.http.routers.traefik.service=api@internal"
-      - "traefik.docker.network=proxy
-      
+        - "traefik.enable=true"
+        - "traefik.http.routers.whoami.rule=Host(`test.example.com`)"
+        - "traefik.http.routers.whoami.entrypoints=websecure"
+        - "traefik.http.routers.whoami.tls=true"
+        - "traefik.http.routers.whoami.tls.certresolver=letencrypt"
+        - "traefik.http.services.whoami.loadbalancer.server.port=80"
+    networks:
+        - proxy
