--- a/docker-services/traefik/data/traefik.yml
+++ b/docker-services/traefik/data/traefik.yml
@@ -6,63 +6,63 @@ api:
 entryPoints:
   web:
     address: ":80"
-    http:
-      redirections:
-        entryPoint:
-          to: websecure
-          scheme: https
-    forwardedHeaders:
-      trustedIPs:
-        - 173.245.48.0/20
-        - 103.21.244.0/22
-        - 103.22.200.0/22
-        - 103.31.4.0/22
-        - 141.101.64.0/18
-        - 108.162.192.0/18
-        - 190.93.240.0/20
-        - 188.114.96.0/20
-        - 197.234.240.0/22
-        - 198.41.128.0/17
-        - 162.158.0.0/15
-        - 104.16.0.0/13
-        - 104.24.0.0/14
-        - 172.64.0.0/13
-        - 131.0.72.0/22
-        - 2400:cb00::/32
-        - 2606:4700::/32
-        - 2803:f800::/32
-        - 2405:b500::/32
-        - 2405:8100::/32
-        - 2a06:98c0::/29
-        - 2c0f:f248::/32
+#     http:
+#       redirections:
+#         entryPoint:
+#           to: websecure
+#           scheme: https
+#     forwardedHeaders:
+#       trustedIPs:
+#         - 173.245.48.0/20
+#         - 103.21.244.0/22
+#         - 103.22.200.0/22
+#         - 103.31.4.0/22
+#         - 141.101.64.0/18
+#         - 108.162.192.0/18
+#         - 190.93.240.0/20
+#         - 188.114.96.0/20
+#         - 197.234.240.0/22
+#         - 198.41.128.0/17
+#         - 162.158.0.0/15
+#         - 104.16.0.0/13
+#         - 104.24.0.0/14
+#         - 172.64.0.0/13
+#         - 131.0.72.0/22
+#         - 2400:cb00::/32
+#         - 2606:4700::/32
+#         - 2803:f800::/32
+#         - 2405:b500::/32
+#         - 2405:8100::/32
+#         - 2a06:98c0::/29
+#         - 2c0f:f248::/32
   websecure:
     address: ":443"
-    forwardedHeaders:
-      trustedIPs:
-        - 173.245.48.0/20
-        - 103.21.244.0/22
-        - 103.22.200.0/22
-        - 103.31.4.0/22
-        - 141.101.64.0/18
-        - 108.162.192.0/18
-        - 190.93.240.0/20
-        - 188.114.96.0/20
-        - 197.234.240.0/22
-        - 198.41.128.0/17
-        - 162.158.0.0/15
-        - 104.16.0.0/13
-        - 104.24.0.0/14
-        - 172.64.0.0/13
-        - 131.0.72.0/22
-        - 2400:cb00::/32
-        - 2606:4700::/32
-        - 2803:f800::/32
-        - 2405:b500::/32
-        - 2405:8100::/32
-        - 2a06:98c0::/29
-        - 2c0f:f248::/32
-serversTransport:
-insecureSkipVerify: true  # No cert verification between traefik and containers
+#     forwardedHeaders:
+#       trustedIPs:
+#         - 173.245.48.0/20
+#         - 103.21.244.0/22
+#         - 103.22.200.0/22
+#         - 103.31.4.0/22
+#         - 141.101.64.0/18
+#         - 108.162.192.0/18
+#         - 190.93.240.0/20
+#         - 188.114.96.0/20
+#         - 197.234.240.0/22
+#         - 198.41.128.0/17
+#         - 162.158.0.0/15
+#         - 104.16.0.0/13
+#         - 104.24.0.0/14
+#         - 172.64.0.0/13
+#         - 131.0.72.0/22
+#         - 2400:cb00::/32
+#         - 2606:4700::/32
+#         - 2803:f800::/32
+#         - 2405:b500::/32
+#         - 2405:8100::/32
+#         - 2a06:98c0::/29
+#         - 2c0f:f248::/32
+# serversTransport:
+# insecureSkipVerify: true  # No cert verification between traefik and containers
 
 providers:
   docker:
@@ -90,8 +90,10 @@ certificatesResolvers:
 
 accessLog:
   filePath: "/logs/access.log"
+  format: json
   fields:
     headers:
+      defaultMode: keep
       names:
         User-Agent: keep
 
