--- a/docker-services/traefik/data/traefik.yml
+++ b/docker-services/traefik/data/traefik.yml
@@ -11,56 +11,56 @@ entryPoints:
 #         entryPoint:
 #           to: websecure
 #           scheme: https
-#     forwardedHeaders:
-#       trustedIPs:
-#         - 173.245.48.0/20
-#         - 103.21.244.0/22
-#         - 103.22.200.0/22
-#         - 103.31.4.0/22
-#         - 141.101.64.0/18
-#         - 108.162.192.0/18
-#         - 190.93.240.0/20
-#         - 188.114.96.0/20
-#         - 197.234.240.0/22
-#         - 198.41.128.0/17
-#         - 162.158.0.0/15
-#         - 104.16.0.0/13
-#         - 104.24.0.0/14
-#         - 172.64.0.0/13
-#         - 131.0.72.0/22
-#         - 2400:cb00::/32
-#         - 2606:4700::/32
-#         - 2803:f800::/32
-#         - 2405:b500::/32
-#         - 2405:8100::/32
-#         - 2a06:98c0::/29
-#         - 2c0f:f248::/32
+    forwardedHeaders:
+      trustedIPs:
+        - 173.245.48.0/20
+        - 103.21.244.0/22
+        - 103.22.200.0/22
+        - 103.31.4.0/22
+        - 141.101.64.0/18
+        - 108.162.192.0/18
+        - 190.93.240.0/20
+        - 188.114.96.0/20
+        - 197.234.240.0/22
+        - 198.41.128.0/17
+        - 162.158.0.0/15
+        - 104.16.0.0/13
+        - 104.24.0.0/14
+        - 172.64.0.0/13
+        - 131.0.72.0/22
+        - 2400:cb00::/32
+        - 2606:4700::/32
+        - 2803:f800::/32
+        - 2405:b500::/32
+        - 2405:8100::/32
+        - 2a06:98c0::/29
+        - 2c0f:f248::/32
   websecure:
     address: ":443"
-#     forwardedHeaders:
-#       trustedIPs:
-#         - 173.245.48.0/20
-#         - 103.21.244.0/22
-#         - 103.22.200.0/22
-#         - 103.31.4.0/22
-#         - 141.101.64.0/18
-#         - 108.162.192.0/18
-#         - 190.93.240.0/20
-#         - 188.114.96.0/20
-#         - 197.234.240.0/22
-#         - 198.41.128.0/17
-#         - 162.158.0.0/15
-#         - 104.16.0.0/13
-#         - 104.24.0.0/14
-#         - 172.64.0.0/13
-#         - 131.0.72.0/22
-#         - 2400:cb00::/32
-#         - 2606:4700::/32
-#         - 2803:f800::/32
-#         - 2405:b500::/32
-#         - 2405:8100::/32
-#         - 2a06:98c0::/29
-#         - 2c0f:f248::/32
+    forwardedHeaders:
+      trustedIPs:
+        - 173.245.48.0/20
+        - 103.21.244.0/22
+        - 103.22.200.0/22
+        - 103.31.4.0/22
+        - 141.101.64.0/18
+        - 108.162.192.0/18
+        - 190.93.240.0/20
+        - 188.114.96.0/20
+        - 197.234.240.0/22
+        - 198.41.128.0/17
+        - 162.158.0.0/15
+        - 104.16.0.0/13
+        - 104.24.0.0/14
+        - 172.64.0.0/13
+        - 131.0.72.0/22
+        - 2400:cb00::/32
+        - 2606:4700::/32
+        - 2803:f800::/32
+        - 2405:b500::/32
+        - 2405:8100::/32
+        - 2a06:98c0::/29
+        - 2c0f:f248::/32
 # serversTransport:
 # insecureSkipVerify: true  # No cert verification between traefik and containers
 
@@ -79,11 +79,12 @@ certificatesResolvers:
     acme:
       email: cert@swintronics.com
       storage: acme.json
-      # caServer: https://acme-v02.api.letsencrypt.org/directory # prod (default)
-      caServer: https://acme-staging-v02.api.letsencrypt.org/directory # staging
+      caServer: https://acme-v02.api.letsencrypt.org/directory # prod (default)
+      # scaServer: https://acme-staging-v02.api.letsencrypt.org/directory # staging
       dnsChallenge:
         provider: cloudflare
-        delayBeforeCheck: 10
+        propagation:
+          delayBeforeChecks: 10
         resolvers:
           - "1.1.1.1:53"
           - "1.0.0.1:53"
