--- a/docker-services/httpbin/compose.yml
+++ b/docker-services/httpbin/compose.yml
@@ -13,5 +13,4 @@ services:
       - "traefik.enable=true"
       - "traefik.http.routers.httpbin.rule=Host(`httpbin.swintronics.com`)"
       - "traefik.http.routers.httpbin.entrypoints=websecure"
-      - "traefik.http.routers.httpbin.tls.certresolver=myresolver"
-      - "traefik.docker.network=proxy"
+      - "traefik.http.routers.httpbin.tls.certresolver=letsencrypt"
