--- a/docker-services/traefik/data/traefik.yml
+++ b/docker-services/traefik/data/traefik.yml
@@ -6,11 +6,11 @@ api:
 entryPoints:
   web:
     address: ":80"
-#     http:
-#       redirections:
-#         entryPoint:
-#           to: websecure
-#           scheme: https
+    http:
+      redirections:
+        entryPoint:
+          to: websecure
+          scheme: https
     forwardedHeaders:
       trustedIPs:
         - 173.245.48.0/20
