Move whoami and httpbin under the debug profile

--- a/docker-services/httpbin/compose.yml
+++ b/docker-services/httpbin/compose.yml
@@ -14,3 +14,5 @@ services:
       - "traefik.http.routers.httpbin.rule=Host(`httpbin.swintronics.com`)"
       - "traefik.http.routers.httpbin.entrypoints=websecure"
       - "traefik.http.routers.httpbin.tls.certresolver=letsencrypt"
+    profiles:
+      - debug
