--- a/docker-services/traefik/compose.yml
+++ b/docker-services/traefik/compose.yml
@@ -38,3 +38,5 @@ services:
         - "traefik.http.routers.whoami.tls.certresolver=letsencrypt"
     networks:
         - proxy
+    profiles: ["debug"]
+
