Treafik reverse proxy (#4)
* Add unproxied DNS entry for ssh access to server

* Traefik with LetsEncrypt DNS challenge

* Add a proxied DNS record for each service

* Fix cloudflare_dns_record resources to use FQDN

* Fix server so it doesn't always rebuild.  Network was wrong

* Add cluster_size.  All DNS records point to servier-0

* Expose httpbin to traefik

* Remove unused public_access variable

* Set DNS root and ssh to cluster IP.  Proxied CNAME for servers

* Open Port 80 to everyone

* Generalize Hetzner networking

* Remove default server type and volume size

* Fix cloud-init and run user bash script at the end

* Add immich docker compose file

* Remove obsolete version from compose file

* Add traefik labels to immich compose file

* Add longer traefik timeouts for loading video

* Revert to letsencrypt staging server

* Hopefully fix users.sudo for cloud-init

* Comment the Hetzner cidr blocks

* Switch to var.server_types.  Factor out service names

* Create a docker ingress network and use it

* Follow spad.uk post on traefix in docker

* git ignore traefik generated files

* Add apache2-utils for htpasswd

* Use Sven van Ginkel's Traefik setup

* Fixes from real life

* Minimal working traefik configuration

* Production certs.  trustedIPs, update delayBeforeCheck

* Working httpbin

* Set insecureSkipVerify true

* Redirect http to https

* Move whoami and httpbin under the debug profile

* Remove https redirection from http entrypoint.  Didn't work -- happens in Cloudflare now

--- a/docker-services/httpbin/compose.yml
+++ b/docker-services/httpbin/compose.yml
@@ -1,9 +1,18 @@
-version: '3'
+include:
+  - "../docker-network-common.yml"
 
 services:
   httpbin:
     image: "kennethreitz/httpbin"
     container_name: "httpbin"
     restart: "no"
-    ports:
-      - 80:80
+    networks:
+      - proxy
+
+    labels:
+      - "traefik.enable=true"
+      - "traefik.http.routers.httpbin.rule=Host(`httpbin.swintronics.com`)"
+      - "traefik.http.routers.httpbin.entrypoints=websecure"
+      - "traefik.http.routers.httpbin.tls.certresolver=letsencrypt"
+    profiles:
+      - debug
