--- a/docker-services/traefik/data/traefik.yml
+++ b/docker-services/traefik/data/traefik.yml
@@ -6,6 +6,8 @@ api:
 entryPoints:
   web:
     address: ":80"
+    forwardedHeaders:
+      insecure: true
     http:
       redirections:
         entryPoint:
@@ -13,6 +15,15 @@ entryPoints:
           scheme: https
   websecure:
     address: ":443"
+    forwardedHeaders:
+        insecure: true
+      # trustedIPs:
+      #   - "100.0.0.0/8"      # Tailscale IPs     insecure: true
+    transport:  
+      respondingTimeouts: # Increase timeouts for immich large uploads
+        readTimeout: 600s
+        idleTimeout: 600s
+        writeTimeout: 600s
 serversTransport:
   insecureSkipVerify: true  # No cert verification between traefik and containers
 
@@ -21,7 +32,7 @@ providers:
     endpoint: "unix:///var/run/docker.sock"
     exposedByDefault: false
     # defaultRule: "Host(`{{ index .Labels \"com.docker.compose.service\"}}.swintronics.com`)"
-    network: proxy
+    # twork: proxy
   file:
     directory: "/configs"
     watch: true
