--- a/docker-services/traefik/data/traefik.yml
+++ b/docker-services/traefik/data/traefik.yml
@@ -32,7 +32,6 @@ providers:
     endpoint: "unix:///var/run/docker.sock"
     exposedByDefault: false
     # defaultRule: "Host(`{{ index .Labels \"com.docker.compose.service\"}}.swintronics.com`)"
-    # twork: proxy
   file:
     directory: "/configs"
     watch: true
@@ -42,8 +41,8 @@ certificatesResolvers:
     acme:
       email: cert@swintronics.com
       storage: acme.json
-      caServer: https://acme-v02.api.letsencrypt.org/directory # prod (default)
-      # scaServer: https://acme-staging-v02.api.letsencrypt.org/directory # staging
+      # caServer: https://acme-v02.api.letsencrypt.org/directory # prod (default)
+      caServer: https://acme-staging-v02.api.letsencrypt.org/directory # staging
       dnsChallenge:
         provider: cloudflare
         propagation:
