Working whoami, traefik dash, immich

--- a/docker-services/compose.yml
+++ b/docker-services/compose.yml
@@ -6,5 +6,5 @@ networks:
 include:
   - "tailscale/compose.yml"
   - "traefik/compose.yml"
-  # - "immich-app/docker-compose.yml"
+  - "immich-app/docker-compose.yml"
   
