--- a/docker-services/httpbin/compose.yml
+++ b/docker-services/httpbin/compose.yml
@@ -11,6 +11,6 @@ services:
       - "traefik.enable=true"
       - "traefik.http.routers.httpbin.rule=Host(`httpbin.swintronics.com`)"
       - "traefik.http.routers.httpbin.entrypoints=websecure"
-      - "traefik.http.routers.httpbin.tls.certresolver=letsencrypt"
+      - "traefik.http.routers.httpbin.tls.certresolver=${CERT_RESOLVER}"
     profiles:
       - debug
