Change to readable traefik access logs

--- a/docker-services/traefik/data/traefik.yml
+++ b/docker-services/traefik/data/traefik.yml
@@ -64,7 +64,7 @@ certificatesResolvers:
 
 accessLog:
   filePath: "/logs/access.log"
-  format: json
+  format: common
   fields:
     headers:
       defaultMode: keep
