--- a/terraform/scripts/cloud-init.yml
+++ b/terraform/scripts/cloud-init.yml
@@ -29,6 +29,28 @@ write_files:
   - path: /etc/sysctl.d/99-enable-ipv4-forwarding.conf
     content: |
       net.ipv4.conf.all.forwarding=1
+  - path: /root/setup_repo.sh
+    # owner: ${admin_user}:${admin_user}
+    permissions: '0644'
+    content: |
+      git clone ${repo}
+      test -f /root/docker-services.env && cp /root/docker-services.env /home/${admin_user}/${project}/docker-services/.env 
+      test -f /root/immich.env && cp /root/docker-services.env /home/${admin_user}/${project}/docker-services/immich-app/.env 
+      sudo chown ${admin_user}:${admin_user} /home/${admin_user}/${project}/docker-services/immich-app/.env /home/${admin_user}/${project}/docker-services/.env 
+  - path: /root/docker-services.env
+    # owner: ${admin_user}:${admin_user}
+    permissions: '0644'
+    content: |
+%{ for line in root_env ~}
+      ${line}
+%{ endfor ~}
+  - path: /root/immich.env
+    # owner: ${admin_user}:${admin_user}
+    permissions: '0644'
+    content: |
+%{ for line in immich_env ~}
+      ${line}
+%{ endfor ~}
 
 # create the docker group
 groups:
@@ -39,7 +61,7 @@ users:
     sudo: "ALL=(ALL) NOPASSWD:ALL"
     groups: [sudo, adm, docker]
     shell: /bin/bash
-    ssh-authorized-keys:
+    ssh_authorized_keys:
     - "${admin_public_key}"
 
 # Install Docker, for production, consider pinning to stable versions
@@ -90,8 +112,8 @@ runcmd:
     } >> "$LOGFILE" 2>&1
     
   - echo "Data disk configuration is complete"
-  # - echo "Configuring unattended upgrades"
-  # - dpkg-reconfigure unattended-upgrades
+  - |
+    su --login ${admin_user} --command 'git clone ${repo} '
 
  # User-provided custom runcmd commands
   # Append user-provided custom runcmd commands
