--- a/docker-services/traefik/compose.yml
+++ b/docker-services/traefik/compose.yml
@@ -8,27 +8,26 @@ services:
     security_opt:
       - no-new-privileges:true
     environment:
-      - TZ=America/New_York
-      - CF_DNS_API_TOKEN=${CF_DNS_API_TOKEN}
-      - CF_API_EMAIL=${CF_API_EMAIL}
+      - TZ=${TZ:?Please set the TZ environment variable}
+      - CF_DNS_API_TOKEN=${CF_DNS_API_TOKEN:?Please set the CF_DNS_API_TOKEN environment variable}
+      - CERT_RESOLVER=${CERT_RESOLVER:?Please set the CERT_RESOLVER environment variable}
+      - SERVER_DOMAIN=${SERVER_DOMAIN:?Please set the SERVER_DOMAIN environment variable}
     network_mode: "service:tailscale"
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock:ro
       - ./data/traefik.yml:/traefik.yml:ro
       - ./data/configs:/configs:ro
-      - traefik-certs:/certs:rw
+      - ${CERT_RESOLVER}-certs:/certs:rw
       - ./data/logs:/logs:rw
     labels:
+        - "traefik.http.services.dummy.loadbalancer.server.port=8080"
         - "traefik.enable=true"
         - "traefik.http.routers.traefik.rule=Host(`traefik.${SERVER_DOMAIN}`)"
-        - "traefik.http.services.traefik.loadbalancer.server.port=1337"
         - "traefik.http.routers.traefik.entrypoints=websecure"
         - "traefik.http.routers.traefik.service=api@internal"
         - "traefik.http.routers.traefik.tls.certresolver=${CERT_RESOLVER}"
-        - "traefik.http.routers.traefik.tls.domains[0].main=${SERVER_DOMAIN}"
-        - "traefik.http.routers.traefik.tls.domains[0].sans=*.${SERVER_DOMAIN}"
-        - "traefik.http.services.traefik.loadbalancer.server.port=8080"
-        - "tailscale=true"
+        
+
     healthcheck:
       test: traefik healthcheck || exit 1
       interval: 60s
@@ -44,10 +43,11 @@ services:
     image: traefik/whoami
     labels:
         - "traefik.enable=true"
-        - "traefik.http.routers.whoami.rule=Host(`whoami.swintronics.com`)"
+        - "traefik.http.routers.whoami.rule=Host(`whoami.${SERVER_DOMAIN}`)"
         - "traefik.http.routers.whoami.entrypoints=websecure"
         - "traefik.http.routers.whoami.tls.certresolver=${CERT_RESOLVER}"
     profiles: ["debug"]
 
 volumes:
-  traefik-certs: null
+  production-certs: null
+  staging-certs: null
