--- a/docker-services/compose.yml
+++ b/docker-services/compose.yml
@@ -9,4 +9,6 @@ include:
   - "immich-app/docker-compose.yml"
   - "dozzle/compose.yml"
   - "paperless/compose.yml"
+  - "uptime-kuma/compose.yml"
+  
   
