--- a/docker-services/compose.yml
+++ b/docker-services/compose.yml
@@ -8,3 +8,7 @@ include:
   - "traefik/compose.yml"
   - "immich-app/docker-compose.yml"
   - "dozzle/compose.yml"
+  - "paperless/compose.yml"
+  - "uptime-kuma/compose.yml"
+  
+  
