--- a/docker-services/dozzle/compose.yml
+++ b/docker-services/dozzle/compose.yml
@@ -1,6 +1,6 @@
 services:
   dozzle:
-    image: amir20/dozzle:latest
+    image: amir20/dozzle:v8.14.7
     container_name: dozzle
     ports:
       - "8888:8080"  # Access via http://localhost:8888
