--- a/docker-services/tailscale/compose.yml
+++ b/docker-services/tailscale/compose.yml
@@ -3,7 +3,7 @@
 services:
   tailscale:
     container_name: tailscale
-    image: tailscale/tailscale:stable
+    image: tailscale/tailscale:v1.90.6
     hostname: swintronics
     ports:
       - "41641:41641/udp" # Tailscale default port
@@ -14,7 +14,6 @@ services:
       - TS_STATE_DIR=/var/lib/tailscale
       - TS_ENABLE_HEALTH_CHECK=true
       - TS_ENABLE_METRICS=true
-
     volumes:
       - tailscale-data:/var/lib/tailscale
     devices:
