--- a/docker-services/networking/tailscale.yml
+++ b/docker-services/networking/tailscale.yml
@@ -5,6 +5,8 @@ services:
     container_name: tailscale
     image: tailscale/tailscale:v1.90.6
     hostname: swintronics
+    networks:
+      - proxy
     ports:
       - "41641:41641/udp" # Tailscale default port
       - 8080:8080 # For Traefik healthcheck
